Prevent long strings from overflowing the .text element

--- a/com/feed-item.less
+++ b/com/feed-item.less
@@ -64,6 +64,8 @@
     .text {
       margin-top: 8px;
       line-height: 1.4;
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
 
     .post-content {
