--- a/com/thread.less
+++ b/com/thread.less
@@ -40,6 +40,8 @@
       font-size: 1.7rem;
       margin-bottom: 5px;
       margin-left: 60px;
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
 
     .post-actions {
