--- a/index.less
+++ b/index.less
@@ -134,6 +134,7 @@ code {
 
   .main-col {
     flex-basis: 60%;
+    max-width: 60%;
 
     &.center {
 
